--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="Alisson Civalski">
+
+  <!-- Meta tags para SEO -->
   <title>Arkersoft TI Solutions</title>
   <meta name="description" content="Soluções em IA, Desenvolvimento de Software de Ponta e Transformação Digital">
   <meta name="keywords" content="Inteligência Artificial, Cloud Computing, IoT, DevOps, Dropshipping, Consultoria">
