main text reduce

--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@
         <!-- Container posicionado no canto inferior esquerdo -->
         <div class="absolute inset-0 flex items-center justify-center md:justify-start md:items-end z-20">
             <div class="glass-container text-center md:text-left md:ml-8 md:mb-8">
-                <h1 class="text-7xl md:text-8xl font-extrabold metallic-text mb-4">
-                    Experimente o Futuro.
-                </h1>
+            <h1 class="text-6xl md:text-7xl font-extrabold metallic-text mb-4">
+                Experimente o Futuro.
+            </h1>
                 <p class="text-xl metallic-text">
                     Transforme seu negocio com as melhores soluções em tecnologia
                 </p>
@@ -223,7 +223,7 @@
     <!-- Tech Stack -->
     <section id="tech" class="section-padding">
         <div class="max-w-7xl mx-auto px-4">
-            <h2 class="text-3xl font-bold text-center mb-12">Nossos Principais Serviços</h2>
+            <h2 class="text-3xl font-bold text-center mb-12">Principais Serviços</h2>
             <div class="grid grid-cols-1 md:grid-cols-4 gap-6">
                 <div class="scroll-reveal opacity-0 translate-y-8 transition-all duration-300">
                     <div
