--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <title>Arkersoft TI Solutions</title>
     <meta name="description" content="Soluções em IA, Desenvolvimento de Software de Ponta e Transformação Digital">
     <meta name="keywords" content="Inteligência Artificial, Cloud Computing, IoT, DevOps, Dropshipping, Consultoria">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;600&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -57,11 +55,26 @@
         }
 
 
+        @keyframes moveGrid {
+            0% {
+                background-position: 0 0, 0 0;
+            }
+
+            50% {
+                background-position: 10px 10px, 10px 10px;
+            }
+
+            100% {
+                background-position: 0 0, 0 0;
+            }
+        }
+
         .light-grid {
             background:
                 linear-gradient(rgba(175, 155, 196, 0.05) 1px, transparent 1px),
                 linear-gradient(90deg, rgba(175, 155, 196, 0.05) 1px, transparent 1px);
             background-size: 20px 20px;
+            animation: moveGrid 10s linear infinite;
         }
 
         .glass-container {
@@ -173,7 +186,6 @@
             text-decoration: none;
             transition: background-color 0.3s ease;
         }
-
     </style>
 </head>
 
@@ -194,20 +206,20 @@
             <ul id="menu" class="hidden md:flex space-x-6">
                 <li><a href="#tech" class="relative px-2 py-1 transition-colors hover:text-purple-300">Tecnologias</a>
                 </li>
-            <!--   <li><a href="#cases" class="relative px-2 py-1 transition-colors hover:text-purple-300">Dropshipping</a> -->
+                <!--   <li><a href="#cases" class="relative px-2 py-1 transition-colors hover:text-purple-300">Dropshipping</a> -->
                 </li>
                 <li><a href="#contact" class="relative px-2 py-1 transition-colors hover:text-purple-300">Contato</a>
                 </li>
-            <!--    <li><a href="#solutions" class="relative px-2 py-1 transition-colors hover:text-purple-300">Preços</a> -->
+                <!--    <li><a href="#solutions" class="relative px-2 py-1 transition-colors hover:text-purple-300">Preços</a> -->
                 </li>
             </ul>
         </div>
         <!-- Menu mobile -->
         <ul id="mobileMenu" class="md:hidden hidden bg-[#0a0a12] border-t border-purple-200/10">
             <li class="px-4 py-2 hover:bg-purple-600"><a href="#tech">Tecnologias</a></li>
-     <!--   <li class="px-4 py-2 hover:bg-purple-600"><a href="#cases">Dropshipping</a></li> -->
+            <!--   <li class="px-4 py-2 hover:bg-purple-600"><a href="#cases">Dropshipping</a></li> -->
             <li class="px-4 py-2 hover:bg-purple-600"><a href="#contact">Contato</a></li>
-     <!--    <li class="px-4 py-2 hover:bg-purple-600"><a href="#solutions">Preços</a></li> -->
+            <!--    <li class="px-4 py-2 hover:bg-purple-600"><a href="#solutions">Preços</a></li> -->
         </ul>
     </nav>
 
@@ -243,7 +255,7 @@
                         <i class="fas fa-atom fa-3x mb-3"></i>
                         <h5 class="text-xl font-semibold mb-2">Criação de Sites</h5>
                         <p class="text-sm">Desenvolvemos sites modernos, do zero ou de um modelo já existente</p>
-                    <!--    <button class="btn-know-more" onclick="window.location.href='site.html'">Saiba Mais</button> -->
+                        <!--    <button class="btn-know-more" onclick="window.location.href='site.html'">Saiba Mais</button> -->
                     </div>
                 </div>
                 <div class="scroll-reveal opacity-0 translate-y-8 transition-all duration-300">
@@ -252,7 +264,7 @@
                         <i class="fas fa-robot fa-3x mb-3"></i>
                         <h5 class="text-xl font-semibold mb-2">Automações</h5>
                         <p class="text-sm">Automação de fluxo de trabalho. Reduza esforços desnecessários</p>
-                    <!--<button class="btn-know-more" onclick="window.location.href='site.html'">Saiba Mais</button> -->
+                        <!--<button class="btn-know-more" onclick="window.location.href='site.html'">Saiba Mais</button> -->
                     </div>
                 </div>
                 <div class="scroll-reveal opacity-0 translate-y-8 transition-all duration-300">
@@ -261,7 +273,7 @@
                         <i class="fas fa-cloud fa-3x mb-3"></i>
                         <h5 class="text-xl font-semibold mb-2">Tratamento de dados</h5>
                         <p class="text-sm">Análises BI, ETL, backup e gerenciamento completo de dados</p>
-                    <!--    <button class="btn-know-more" onclick="window.location.href='site.html'">Saiba Mais</button> -->
+                        <!--    <button class="btn-know-more" onclick="window.location.href='site.html'">Saiba Mais</button> -->
                     </div>
                 </div>
                 <div class="scroll-reveal opacity-0 translate-y-8 transition-all duration-300">
@@ -270,7 +282,7 @@
                         <i class="fas fa-cogs fa-3x mb-3"></i>
                         <h5 class="text-xl font-semibold mb-2">SEO</h5>
                         <p class="text-sm">Destaque sua presença no universo digital</p>
-                    <!--   <button class="btn-know-more" onclick="window.location.href='site.html'">Saiba Mais</button> -->
+                        <!--   <button class="btn-know-more" onclick="window.location.href='site.html'">Saiba Mais</button> -->
                     </div>
                 </div>
             </div>
@@ -321,9 +333,6 @@
                 <img src="logowp.png" alt="WhatsApp">
             </a>
     </section>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
     <script>
         // Toggle do menu mobile
         document.getElementById('menuToggle').addEventListener('click', () => {
@@ -347,11 +356,11 @@
                 entries.forEach(entry => {
                     if (entry.isIntersecting) {
                         const source = document.createElement('source');
-                        source.src = 'techvideo2.mp4';
+                        source.src = 'earth.mp4';
                         source.type = 'video/mp4';
                         bgVideo.appendChild(source);
                         bgVideo.load();
-                        bgVideo.playbackRate = 1.2;
+                        bgVideo.playbackRate = 0.45;
                         videoObserver.unobserve(bgVideo);
                     }
                 });
@@ -370,7 +379,7 @@
                     background: "#222",
                     color: "#fff",
                     confirmButtonColor: "rgba(186, 85, 211, 0.4)",
-                    html: "Você está <span style='color: red;'>perdendo</span> a oportunidade de fazer sua empresa multiplicar seus <span style='color: #39ff14;'>lucros</span>! Clique no ícone do WhatsApp e descubra como...",
+                    html: "Você está perdendo a oportunidade de fazer sua empresa multiplicar seus lucros! Clique no ícone do WhatsApp e descubra como...",
                     iconColor: "red"
                 });
             }
@@ -383,6 +392,14 @@
             }
         });
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>  
+    
+    <footer class="bg-gray-800 border-t border-gray-700">
+        <div class="container mx-auto px-4 py-4 text-center">
+            <p class="text-gray-400">&copy; 2025 Arkersoft. Todos os direitos reservados.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
