--- a/dados.html
+++ b/dados.html
@@ -211,7 +211,7 @@
                     garantir a segurança, acessibilidade e confiabilidade das informações dentro de uma empresa.
                 </p>
                 <p style="margin-top: 2rem;"></p>
-                <a href="https://api.whatsapp.com/send/?phone=%2B5519998205608&text&type=phone_number&app_absent=0"
+                <a href="https://api.whatsapp.com/send/?phone=%2B5519998205608&text&type=phone_number&app_absent=0" target="_blank"
                     class="btn-know-more blur-text">Agende Uma Avaliação Gratuita</a>
                 </section>
             </div>
