--- a/automacao.html
+++ b/automacao.html
@@ -213,7 +213,7 @@
                     negócio.
                 </p>
                 <p style="margin-top: 2rem;"></p>
-                <a href="https://api.whatsapp.com/send/?phone=%2B5519998205608&text&type=phone_number&app_absent=0"
+                <a href="https://api.whatsapp.com/send/?phone=%2B5519998205608&text&type=phone_number&app_absent=0" target="_blank"
                     class="btn-know-more blur-text">Agende Uma Avaliação Gratuita</a>
                 </section>
             </div>
