--- a/seo.html
+++ b/seo.html
@@ -220,7 +220,7 @@
                     </p>
                     <p style="margin-top: 2rem;"></p>
                     <a href="https://api.whatsapp.com/send/?phone=%2B5519998205608&text&type=phone_number&app_absent=0"
-                        class="btn-know-more blur-text">Agende Uma Avaliação Gratuita</a>
+                        target="_blank" class="btn-know-more blur-text">Agende Uma Avaliação Gratuita</a>
                 </section>
             </div>
         </div>
