--- a/dados.html
+++ b/dados.html
@@ -126,7 +126,7 @@
 
     <nav class="fixed top-0 w-full bg-[#0a0a12] backdrop-blur-lg border-b border-purple-600/10 z-20">
         <div class="max-w-7xl mx-auto px-4 flex items-center justify-between h-16">
-            <a href="#" class="text-2xl font-semibold metallic-text flex items-center">
+            <a href="https://www.arkersoft.com/index.html" class="text-2xl font-semibold metallic-text flex items-center">
                 <img src="arkerlg.png" alt="Logo" class="h-auto w-auto max-h-8 max-w-[150px] mr-2">
             </a>
 
